Fix incorrect atlas mip level; destroy unused mipmaps